// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> <TextField /> with error caption should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default"
    htmlFor="test-text-field-id"
  >
    test text field label
  </label>
  <input
    className="default size-md error filled"
    id="test-text-field-id"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value="test value"
  />
  <span
    className="default body-sm weight-regular error-600 line-height-body-sm"
  >
    test caption
  </span>
</div>
`;

exports[`<TextField /> <TextField /> with valid value should match snapshot 1`] = `
<div
  className="wrapper"
>
  <label
    className="default"
    htmlFor="test-text-field-id"
  >
    test text field label
  </label>
  <input
    className="default size-md filled"
    id="test-text-field-id"
    onBlur={[Function]}
    onChange={[MockFunction]}
    onFocus={[Function]}
    onInput={[Function]}
    placeholder="test placeholder"
    type="text"
    value="test value"
  />
</div>
`;
